adding functionality to remove an item from cart

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -33,7 +33,10 @@
           <td>{{product.productname}}<br></td>
           <td><img src="{{url_for('static', filename='images/'+product.pid|string+'.png')}}" alt='no product image.' width="256" height="256" /></td>
           <td>{{product.sellerfirstname}} {{product.sellerlastname}}</td>
-          <td>{{product.quantity}}</td>
+          <td>
+            {{product.quantity}}
+            <a href="{{url_for('products.removeFromCart', sid=product.sid, pid=product.pid) }}" class="btn btn-primary btn-lg" role="button">Remove</a>
+          </td>
           <td>{{product.unitprice}}</td>
         </tr>
         {% set _= total.append(total.pop() + product.quantity * product.unitprice) %}
