--- a/app/templates/orderDetail.html
+++ b/app/templates/orderDetail.html
@@ -21,7 +21,7 @@
     {% for orderItem in orderDetail %}
       <tr>
         <th scope="row">{{orderItem.pid}}</th>
-        <td>{{orderItem.productname}}</td>
+        <td><a href="{{url_for('products.details', pid=orderItem.pid)}}" >{{orderItem.productname}}</a></td>
         <td><img src="{{url_for('static', filename='images/'+orderItem.pid|string+'.png')}}" alt='no product image.' width="256" height="256" /></td>
         <td><a href="{{url_for('users.publicProfile', variable=orderItem.sid) }}">{{orderItem.sellerfirstname}} {{orderItem.sellerlastname}}</a></td>
         <td>{{orderItem.quantity}}</td>
@@ -32,7 +32,7 @@
     {% endfor %}
   </tbody>
 </table>
-<p>Total is: {{total[0] }} </p>
+<h4>Total is: {{total[0] }} </h4>
 
 {% else %}
 <h4>Can't find the order </h4>
