--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -107,6 +107,7 @@
     
 <br><br>
     <h2>Your Purchase History:</h2>
+    {% if purchase_history|length != 0 %}
     <table class='table table-hover table-bordered container'>
       <thead class="thead-dark">
         <tr>
@@ -131,6 +132,9 @@
         {% endfor %}
       </tbody>
     </table>
+    {% else %}
+    <p> No purchase yet</p>
+    {% endif %}
 
 {% else %}
 <p><a href="{{ url_for('users.login') }}">Log in</a> to see your purchase history!</p>
