--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -18,6 +18,7 @@
 <a href="{{ url_for('products.cart') }}" type="button" class="btn btn-light">Your Cart</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="{{ url_for('inventory.inventory') }}" type="button" class="btn btn-light">Your Inventory</a>
+<a href="{{ url_for('purchase.order_fulfillment') }}" type="button" class="btn btn-light">Order Fulfillment</a>
 <p> TODO Feedback interface </p>
 
 <br><br>
