--- a/app/templates/productdetails.html
+++ b/app/templates/productdetails.html
@@ -12,6 +12,7 @@
       <th scope="col">Product ID</th>
       <th scope="col">Product Name</th>
       <th scope="col">Image</th>
+      <th scope="col">Average Rating</th>
     </tr>
   </thead>
   <tbody>
@@ -20,6 +21,7 @@
         <th scope="row">{{product.id}}</th>
         <td>{{product.name}}<br></td>
         <td><img src="{{url_for('static', filename='images/'+product.id|string+'.png')}}" alt='no product image.' width="256" height="256" /></td>
+        <td>{{'%0.2f' % product.avgrating if product.avgrating else ""}}</td>
       </tr>
     {% endfor %}
   </tbody>
@@ -57,6 +59,33 @@
 
 {% else %}
 <h4> Does not belong to any seller </h4>
+{% endif %}
+
+
+
+{% if ratings_and_reviews|length != 0 %}
+<h4>Ratings and Reviews:</h4>
+<table class='table table-hover table-bordered container'>
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Rating</th>
+      <th scope="col">Review</th>
+      <th scope="col">Date</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for rnr in ratings_and_reviews %}
+    <tr>
+        <td> {{rnr['rating']}} </td>
+        <td> {{rnr['review']}} </td>
+        <td> {{rnr['date']}} </td>
+    </tr>
+    {% endfor %}
+    </tbody>
+  </table>
+
+{% else %}
+<h4> No ratings or reviews for this product. </h4>
 {% endif %}
 
 <br><br>
