--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -16,10 +16,11 @@
 
 <hr/>
 <a href="{{ url_for('products.cart') }}" type="button" class="btn btn-light">Your Cart</a>
+<a href="{{ url_for('users.profileFeedback') }}" type="button" class="btn btn-light"> Feedbacks</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="{{ url_for('inventory.inventory') }}" type="button" class="btn btn-light">Your Inventory</a>
 <a href="{{ url_for('purchase.order_fulfillment') }}" type="button" class="btn btn-light">Order Fulfillment</a>
-<p> TODO Feedback interface </p>
+
 
 <br><br>
 
@@ -134,11 +135,12 @@
       </tbody>
     </table>
     {% else %}
-    <p> No purchase yet</p>
+    <p> No purchase yet</p><br>
     {% endif %}
 
+
 {% else %}
-<p><a href="{{ url_for('users.login') }}">Log in</a> to see your purchase history!</p>
+<p><a href="{{ url_for('users.login') }}">Log in</a> to see your purchase history and feedbacks!</p>
 {% endif %}
 {% endblock %}
 
