--- a/app/templates/profileFeedback.html
+++ b/app/templates/profileFeedback.html
@@ -57,7 +57,10 @@
         <td> {{feedback.rating}} </td>
         <td> {{feedback.review}} </td>
         <td> {{feedback.time_submitted}} </td>
-        <td> update here </td>
+        <td> 
+            <a href="{{ url_for('users.updateProductFeedback', pid = feedback.pid)}}" type="button" class="btn btn-light">Update</a>
+            <a href="{{ url_for('users.removeProductFeedback', pid = feedback.pid) }}" class="btn btn-danger btn-sm" role="button">Remove</a>
+        </td>
 
     </tr>
     {% endfor %}
@@ -90,7 +93,9 @@
         <td> {{feedback.rating}} </td>
         <td> {{feedback.review}} </td>
         <td> {{feedback.time_submitted}} </td>
-        <td> update here </td>
+        <td> <a href="{{ url_for('users.updateSellerFeedback', sid = feedback.sid) }}" type="button" class="btn btn-light">update</a>
+             <a href="{{ url_for('users.removeSellerFeedback', sid = feedback.sid) }}" class="btn btn-danger btn-sm" role="button">Remove</a>
+        </td>
     </tr>
     {% endfor %}
     </tbody>
