--- a/app/templates/updateProductFeedback.html
+++ b/app/templates/updateProductFeedback.html
@@ -13,13 +13,7 @@
 {% endwith %}
 
 
-
-{% if commented|length != 0 %}
-<h2>Thanks for sharing your feedback of this seller! You can update your feedback here</h2>
-<a href="{{ url_for('users.profile') }}" type="button" class="btn btn-light">Click here to view/update your feedback</a>
- 
-{% else %}
-<h1>How do you feel about this product?</h1>
+<h1>How do you feel about this Product?</h1>
 <form action="" method="post">
 <br>
  
@@ -36,7 +30,6 @@
  
         <p>{{ form.submit() }}</p>
 </form>
-{% endif %}
 
-    
+
 {% endblock %}
